<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="appllication_name" translatable="false">Primesys Track</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_map">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="terms"><u>Term\'s and Condition</u></string>
    <string name="read_accept">I have Read &amp; Accepted</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing inâ€¦</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading Wait..</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="title_activity_item_list_with_refine">ItemListWIthRefine</string>
    <string name="facebook_app_id">238971723123983</string>
    <string name="MapKeyLive">AIzaSyAyPQ7h3-MBB3IAOAMACNJJmhKl2LvtpkY</string>
    <string name="MapKeyDebug">AIzaSyCsUL2QWb_jiO2DhXcq1iTWk9ErLOrmyro</string>
    <string name="toolbar_name"></string>
    <string name="title_activity_add_new_friend">AddNewFriend</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile Number</string>
    <string name="email">Email</string>
    <string name="title_activity_new_request">NewRequest</string>
    <string name="title_activity_block_tracking">BlockTracking</string>
    <string name="sharemessaage">Get the Primesys Track app.Click on : https://play.google.com/store/apps/details?id=com.primesys.VehicalTracking</string>
    <string name="title_activity_track_switch">TrackSwitch</string>
    <string name="server_error">Server Error Occure</string>
    <string name="heading_name">Locator</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="str_wait">Please wait...</string>
    <string name="str_conn_error">Please turn on Internet connection</string>
    <string name="title_activity_smap">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_rb_pt">By PT</string>
    <string name="str_rb_vts">By VTS</string>
    <string name="r_distance">Mileage</string>
    <string name="r_speed">Speed Alert</string>
    <string name="r_stop">Stop Engine</string>
    <string name="r_start">Start Engine</string>
    <string name="vtsdisablemsg">VTS service is not subscribed for you. Please contact to contact@mykiddytracker.com</string>
    <string name="passwordnotmatch">Invalid Engine Pin.If you not remember use forget engine pin.</string>
    <string name="Submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="stop_engine_ensure"> Please ensure,\n - Speed less than 20Km/hr. \n - Engine is running. \n - Message pack is available. \n - Device is ON. \n - Availability of network services. \n - Relay is properly connected."</string>
    <string name="start_engine_ensure">Please ensure,\n - Message pack is available. \n - Device is ON. \n - Availability of network services. \n - Relay is properly connected."</string>
    <string name="common_error_sms">Please ensure,\n - Message pack is available. \n - Device is ON. \n - Availability of network services. \n - Relay is properly connected."</string>
    <string name="font_family_times_new_roman">Times New Roman</string>
    <string name="close">Close</string>
    <string name="road_snap_api_key">AIzaSyB-NGbvQVVoBWPwiRHR3-zJFajx7LSAOOc</string>
    <string name="renew">Renew Service</string>
    <string name="service.expiration">Service Expiration</string>
    <string name="status">Status</string>
    <string name="purchase.extention">Purchase Extension for</string>
    <string name="username">User Name</string>
    <string name="month">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="half">Half Yearly</string>
    <string name="year">Yearly</string>
    <string name="rs">\u20B9</string>
    <string name="str_make_reachage">Subscription is expired, Please renew it from Make Payment option or Web Portal.</string>
    <string name="str_make_reachage_title">Subscription is expired</string>
    <string name="str_guest_error_msg">You are Guest User.you cant perform such action. </string>
    <string name="paytm_wallet">Using Paytm Wallet</string>
    <string name="card_payment">Using Card Payment </string>
    <string-array name="device_type">
        <item>Select Device Type</item>
        <item>Child</item>
        <item>Car</item>
        <item>Pet</item>
    </string-array>
    <string name="place_search_hint"> Enter your area to set geo-fence</string>
    <string name="place_search_nulldetail"> Please enter your area in detail to set geo-fence</string>
    <string name="communication_school">Communication with School</string>
    <string name="communication_teacher">Communication </string>
    <string name="voice__servilence_error">Voice surveillance is failed, please ensure, \n -Device is switch on.\n -Device has sms and talktime balance.\n -Initiator is configured  as SOS for device.\n -Initiator has enough  sms/talk time pack.\n -It might be network issue;you might be getting call after device in network. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="call_mode_array_name">
        <item>Ringtone Mode</item>
        <item>Vibration Mode</item>
        <item>Ringtone Vibration Mode</item>
        <item>Mute</item>

    </string-array>
    <string-array name="call_volume_array_name">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="about_page_description" translatable="false">"Primesys Track” is one stop fleet solution for vehicle tracking and employees management for personal tracking. Both products provides tracking based on GPS/GPRS technology and, offer tracking capability via web portal as well as apps on Android based and iOS based smart phones.</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="contact_us_title">Our customer support services are the best in the biz, with a 99% customer satisfaction rating. They’re standing by to help you.</string>
    <string name="call">Call</string>
    <string name="sendmail">Send Mail</string>
    <string name="sendmessage">Send Message</string>
</resources>