<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_msg_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/month"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_msg_quarterly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/quarterly"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_msg_half"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/half"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_msg_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/year"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textprice_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textprice_quarterly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textprice_half"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textprice_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rbt_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:checked="true"
            android:gravity="center_vertical" />

        <RadioButton
            android:id="@+id/rb_quarter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/rb_half"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/rb_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center" />
    </RadioGroup>

</LinearLayout>