<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background" >

    <include layout="@layout/app_bar_home"
        android:id="@+id/appbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:layout_below="@+id/appbar"       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_states"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_normal"
                    android:weightSum="1" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_states"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_normal"
                    android:weightSum="1" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="@string/username"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_username"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_states"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_normal"
                    android:weightSum="1" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="@string/service.expiration"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_date1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_states"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_normal"
                    android:weightSum="1" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="@string/status"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_status1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:text="Deactivated"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_extention"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/purchase.extention"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

               <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    layout="@layout/fragment_payment" />


                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Select Payment Method"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/rbt_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:checked="true"
                        android:text="@string/card_payment"
                        android:textColor="@color/white"
                        android:gravity="center_vertical" />

                    <RadioButton
                        android:id="@+id/rb_paytm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:textColor="@color/white"

                        android:text="@string/paytm_wallet"
                        android:gravity="center" />

                </RadioGroup>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_renew"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/capsulshapebutton"
                        android:onClick="onBuyPressed"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/renew" />
                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/capsulshapebutton"
                        android:onClick="onBuyPressed"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:gravity="center"
                        android:text="@string/cancel" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>